# core

./: .gitignore  essaie_download.py  pyproject.toml
openhexa/core/: config.py  downloader.py
